--- a/ad_add.html
+++ b/ad_add.html
@@ -10,7 +10,26 @@
     <div id="header"></div>
     <div id="searcher"></div>
     <div id="ads"></div>
+    <div><iframe
+            id="map"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d75219.11575161752!2d27.544780799999998!3d53.90336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sby!4v1650570727649!5m2!1sru!2sby"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     <div id="footer"></div>
+    <script type="text/javascript">
+        function initMap() {
+            var coordinates = { lat: 47.212325, lng: 38.933663 },
+
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: coordinates
+                }),
+
+                marker = new google.maps.Marker({
+                    position: coordinates,
+                    map: map
+                });
+        }
+    </script>
 
 </body>
 
