--- a/ad_add.html
+++ b/ad_add.html
@@ -23,7 +23,7 @@
                 height: 50px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
+                font-size: 15px;
             }
 
             nav {
@@ -109,7 +109,7 @@
                 height: 180px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
+                font-size: 15px;
             }
 
             nav {
@@ -149,7 +149,7 @@
         @media (min-width: 240px) and (max-width: 359px) {
 
             body {
-                font-size: 10px;
+                font-size: 15px;
             }
 
             .up {
@@ -166,7 +166,7 @@
                 height: 180px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
+                font-size: 15px;
             }
 
             nav {
@@ -211,7 +211,7 @@
         form {
             color: rgb(86, 86, 86);
             font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
-            font-size: 12px;
+            font-size: 15px;
         }
 
         textarea {
@@ -269,9 +269,9 @@
         }
     </style>
 
-    <link rel="stylesheet" href="./menu.css" />
-    <link rel="stylesheet" href="./arrow.css" />
-    <link rel="stylesheet" href="./form.css" />
+    <link rel="stylesheet" href="./styles/menu.css" />
+    <link rel="stylesheet" href="./styles/arrow.css" />
+    <link rel="stylesheet" href="./styles/form.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
