--- a/help.html
+++ b/help.html
@@ -31,8 +31,7 @@
         height: 50px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
-      }
+        font-size:18px;    }
 
       nav {
         grid-column: 2/6;
@@ -68,8 +67,7 @@
         height: 180px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
-      }
+        font-size:18px;   }
 
       nav {
         grid-row: 2/3;
@@ -94,7 +92,7 @@
       }
 
       body {
-        font-size: 10px;
+        font-size: 18px;
       }
 
       .up {
@@ -111,8 +109,7 @@
         height: 180px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
-      }
+        font-size:18px;    }
 
       nav {
         grid-row: 2/3;
@@ -181,9 +178,9 @@
     }
   </style>
 
-  <link rel="stylesheet" href="./quastions.css" />
-  <link rel="stylesheet" href="./menu.css" />
-  <link rel="stylesheet" href="./arrow.css" />
+  <link rel="stylesheet" href="./styles/quastions.css" />
+  <link rel="stylesheet" href="./styles/menu.css" />
+  <link rel="stylesheet" href="./styles/arrow.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -223,7 +220,7 @@
           </object>
         </button>
         <div id="myDropdown1" class="dropdown-content">
-           Сайт позволяет размещать и просматривать объявления о продаже поддержанных автомобилей.
+          Сайт позволяет размещать и просматривать объявления о продаже поддержанных автомобилей.
         </div>
       </div>
       <div class="dropdown">
