--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         height: 180px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
+        font-size: 16px;
       }
 
       nav {
@@ -345,7 +345,7 @@
         word-wrap: break-word;
         grid-column: 1/4;
         font-weight: bold;
-        font-size: 15px !important;
+        font-size: 18px !important;
         font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
         text-decoration: underline;
       }
@@ -431,7 +431,6 @@
         margin: auto;
       }
 
-      form {}
     }
 
     .ads {
@@ -510,12 +509,11 @@
     }
   </style>
 
-  <link rel="stylesheet" href="./menu.css" />
-  <link rel="stylesheet" href="./arrow.css" />
+  <link rel="stylesheet" href="./styles/arrow.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="./menu.css" />
-  <link rel="stylesheet" href="./btn.css" />
+  <link rel="stylesheet" href="./styles/menu.css" />
+  <link rel="stylesheet" href="./styles/btn.css" />
 
 </head>
 
@@ -572,7 +570,7 @@
           <button class="btn-search">Поиск</button>
 
         </form>
-        <script type="text/javascript" src="./model.js"></script>
+        <script type="text/javascript" src="./scripts/model.js"></script>
       </div>
 
       <a href="#" title="Вернуться к началу" class="topbutton">
@@ -595,7 +593,7 @@
         </div>
         <div class="car_info">
           <p class="car_name">
-            <a href="./view_ad.html">Volvo S40</a>
+            <a href="./view_ad1.html">Volvo S40</a>
           </p>
           <p class="car_describe">2.0, Бензин, 2020, Автоматическая, 12 630 км</p>
           <p class="price">2067 $</p>
@@ -608,7 +606,7 @@
         </div>
         <div class="car_info">
           <p class="car_name">
-            <a>ВАЗ Largus</a>
+            <a href="./view_ad2.html">ВАЗ Largus</a>
           </p>
           <p class="car_describe">1.6, Бензин, 2017, Механическая, 180 160 км</p>
           <p class="price">4788444 $</p>
@@ -623,15 +621,15 @@
         </div>
         <div class="car_info">
           <p class="car_name">
-            <a>Toyota Camry</a>
+            <a href="./view_ad3.html">Toyota Camry</a>
           </p>
           <p class="car_describe">1.6, Бензин, 2020, Механическая, 70 784 км</p>
           <p class="price">30000 $</p>
         </div>
       </div>
 
-      <script type="text/javascript" src="./sort_max_to_min.js"></script>
-      <script type="text/javascript" src="./sort_min_to_max.js"></script>
+      <script type="text/javascript" src="./scripts/sort_max_to_min.js"></script>
+      <script type="text/javascript" src="./scripts/sort_min_to_max.js"></script>
 
     </div>
 
