--- a/news.html
+++ b/news.html
@@ -72,7 +72,7 @@
         height: 50px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
+        font-size: 18px;
       }
 
       nav {
@@ -145,7 +145,7 @@
         height: 180px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
+        font-size: 18px;
       }
 
       nav {
@@ -220,7 +220,7 @@
         height: 180px;
         background-color: rgb(74, 74, 74);
         border-radius: 8px;
-        font-size: 0;
+        font-size: 18px;
       }
 
       nav {
@@ -276,7 +276,7 @@
 
     .dop_info p {
       display: inline-block;
-      font-size: 15px;
+      font-size: 18px;
     }
 
     .dop_info {
@@ -292,9 +292,9 @@
     }
   </style>
 
-  <link rel="stylesheet" href="./font.css" />
-  <link rel="stylesheet" href="./menu.css" />
-  <link rel="stylesheet" href="./arrow.css" />
+  <link rel="stylesheet" href="./styles/font.css" />
+  <link rel="stylesheet" href="./styles/menu.css" />
+  <link rel="stylesheet" href="./styles/arrow.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
