--- a/view_ad2.html
+++ b/view_ad2.html
@@ -23,8 +23,7 @@
                 height: 50px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
-            }
+                font-size:18px;          }
 
             nav {
                 grid-column: 2/6;
@@ -63,21 +62,21 @@
 
             .name {
                 font-weight: bold;
-                font-size: 30px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
                 text-decoration: underline;
             }
 
             .short {
 
-                font-size: 15px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
 
             }
 
             .price {
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
             }
 
@@ -100,7 +99,7 @@
                 grid-column: 1/3;
                 grid-row: 1/1;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
             }
@@ -132,8 +131,7 @@
                 height: 180px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
-            }
+                font-size:18px;          }
 
             nav {
                 grid-row: 2/3;
@@ -182,21 +180,21 @@
 
             .name {
                 font-weight: bold;
-                font-size: 30px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
                 text-decoration: underline;
             }
 
             .short {
 
-                font-size: 15px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
 
             }
 
             .price {
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
             }
 
@@ -220,7 +218,7 @@
                 grid-column: 1/3;
                 grid-row: 1/1;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
             }
@@ -236,7 +234,7 @@
         @media (min-width: 240px) and (max-width: 359px) {
 
             body {
-                font-size: 10px;
+                font-size: 18px;
             }
 
             .up {
@@ -253,8 +251,7 @@
                 height: 180px;
                 background-color: rgb(74, 74, 74);
                 border-radius: 8px;
-                font-size: 0;
-            }
+                font-size:18px;          }
 
             nav {
                 grid-row: 2/3;
@@ -303,21 +300,21 @@
 
             .name {
                 font-weight: bold;
-                font-size: 30px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
                 text-decoration: underline;
             }
 
             .short {
 
-                font-size: 15px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
 
             }
 
             .price {
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
             }
 
@@ -341,7 +338,7 @@
                 grid-column: 1/3;
                 grid-row: 1/1;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 18px;
                 font-family: Roboto, "Helvetica Neue", Helvetica, Arial;
 
             }
@@ -419,10 +416,10 @@
     </style>
 
 
-    <link rel="stylesheet" href="./menu.css" />
-    <link rel="stylesheet" href="./view.css" />
-    <link rel="stylesheet" href="./slider.css" />
-    <link rel="stylesheet" href="./arrow.css" />
+    <link rel="stylesheet" href="./styles/menu.css" />
+    <link rel="stylesheet" href="./styles/view.css" />
+    <link rel="stylesheet" href="./styles/slider.css" />
+    <link rel="stylesheet" href="./styles/arrow.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -456,19 +453,17 @@
         <div class="view">
             <div class="sl">
                 <div class="slider">
-                    <div class="item">
-                        <img src="./photo_car_jpg/v1.jpg" alt="Первый слайд">
 
+                    <div class="item">
+                        <img src="./photo_car_jpg/ваз1.jpg" alt="Первый слайд">
                     </div>
 
                     <div class="item">
-                        <img src="./photo_car_jpg/v2.jpg" alt="Второй слайд">
-
+                        <img src="./photo_car_jpg/ваз2.jpg" alt="Второй слайд">
                     </div>
 
                     <div class="item">
-                        <img src="./photo_car_jpg/v3.jpg" alt="Третий слайд">
-
+                        <img src="./photo_car_jpg/ваз3.jpg" alt="Третий слайд">
                     </div>
 
                     <a class="prev" onclick="minusSlide()">&#10094;</a>
@@ -480,11 +475,11 @@
                     <span class="slider-dots_item" onclick="currentSlide(2)"></span>
                     <span class="slider-dots_item" onclick="currentSlide(3)"></span>
                 </div>
-                <script type="text/javascript" src="./slider.js"></script>
+                <script type="text/javascript" src="./scripts/slider.js"></script>
             </div>
 
             <div class="short_info">
-                <div class="name">Volvo S40</div>
+                <div class="name">ВАЗ Largus</div>
                 <div class="short">2.0, Бензин, 2020, Автоматическая, 12 630 км</div>
                 <div class="price">1000 $</div>
                 <div class="btns">
